--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.5",
