--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "talhakerpicci.com",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next lint && next build",
