--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/refractor": "^3.0.2",
     "next-themes": "^0.2.1",
     "react-refractor": "^4.0.0",
+    "refractor": "^4.8.1",
     "typescript": "^5.2.2"
   }
 }
